[tool.poetry]
name = "favorite-snippets"
version = "0.1.0"
description = "Pieces that've made me feel good once upon a time"
authors = ["Vasilii Kuimov <vasilykuimov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"

black = "22.6.0"
pytest = "7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
